<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/fab_margin"
    >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuemro7"
        android:id="@+id/n7"
        android:textSize="@dimen/numbers"
        android:layout_below="@id/result"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuemro8"
        android:id="@+id/n8"
        android:layout_toEndOf="@id/n7"
        android:textSize="@dimen/numbers"
        android:layout_below="@id/result"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuemro9"
        android:id="@+id/n9"
        android:layout_toEndOf="@id/n8"
        android:textSize="@dimen/numbers"
        android:layout_below="@id/result"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuemro4"
        android:id="@+id/n4"
        android:layout_below="@id/n7"
        android:textSize="@dimen/numbers"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuemro5"
        android:id="@+id/n5"
        android:layout_below="@id/n8"
        android:layout_toEndOf="@id/n4"
        android:textSize="@dimen/numbers"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuemro6"
        android:id="@+id/n6"
        android:layout_below="@id/n9"
        android:layout_toEndOf="@id/n5"
        android:textSize="@dimen/numbers"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuemro1"
        android:id="@+id/n1"
        android:layout_below="@id/n4"
        android:textSize="@dimen/numbers"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuemro2"
        android:id="@+id/n2"
        android:layout_below="@id/n5"
        android:layout_toEndOf="@id/n1"
        android:textSize="@dimen/numbers"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuemro5"
        android:id="@+id/n3"
        android:layout_below="@id/n6"
        android:layout_toEndOf="@id/n2"
        android:textSize="@dimen/numbers"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuemro0"
        android:id="@+id/n0"
        android:layout_below="@id/n1"
        android:textSize="@dimen/numbers"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/punto"
        android:id="@+id/punto"
        android:layout_below="@id/n2"
        android:layout_toEndOf="@id/n0"
        android:textSize="@dimen/numbers"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/igual"
        android:id="@+id/igual"
        android:layout_below="@id/n3"
        android:layout_toEndOf="@id/punto"
        android:textSize="@dimen/numbers"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division"
        android:id="@+id/division"
        android:layout_toEndOf="@id/n9"
        android:textSize="@dimen/numbers"
        android:layout_below="@id/result"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplicacion"
        android:id="@+id/multiply"
        android:layout_below="@id/division"
        android:layout_toEndOf="@id/n6"
        android:textSize="@dimen/numbers"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resta"
        android:id="@+id/resta"
        android:layout_below="@id/multiply"
        android:layout_toEndOf="@id/n6"
        android:textSize="@dimen/numbers"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sum"
        android:id="@+id/suma"
        android:layout_below="@id/resta"
        android:layout_toEndOf="@id/igual"
        android:textSize="@dimen/numbers"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/placeholder0"
        android:textAlignment="textEnd"
        android:id="@+id/result"
        android:textSize="35dp"
        android:layout_alignParentEnd="true"
        />


</RelativeLayout>