<?xml version="1.0" encoding="utf-8"?>


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resultado"
            android:text="@string/placeholder0"
            android:textAlignment="center"
            android:textSize="@dimen/resultado"
            android:textAppearance="?android:textAppearanceLarge"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numa"
            android:inputType="number"
            android:layout_below="@id/resultado"
            android:hint="@string/numeroa"
            android:layout_margin="@dimen/fab_margin"
            android:layout_toStartOf="@id/sumar"
            android:layout_alignParentLeft="true"
            />
        
        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/sumar"
            android:layout_below="@id/resultado"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/sumar"
            android:drawableTop="@drawable/ic_add_black_24dp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/numb"
            android:inputType="number"
            android:layout_below="@id/numa"
            android:hint="@string/numerob"
            android:layout_margin="@dimen/fab_margin"
            android:layout_toStartOf="@id/sumar"
            android:layout_alignParentLeft="true"
            />

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/restar"
            android:layout_below="@id/sumar"
            android:layout_alignParentRight="true"
            android:layout_margin="@dimen/fab_margin"
            android:text="@string/restar"
            android:drawableTop="@drawable/ic_remove_black_24dp"
            />


    </RelativeLayout>

